--- a/learning/assets/styles/main.css
+++ b/learning/assets/styles/main.css
@@ -1,6 +1,7 @@
 .jumbotron {
   border-radius: 0;
-  background-image: url("https://cdn.pixabay.com/photo/2014/02/28/16/45/mount-everest-276995__480.jpg");
+  /* nuxtが自動的にstaticフォルダ内を参照 */
+  background-image: url("/mountain.jpg");
   height: 300px;
   background-size: cover;
 }
