--- a/learning/assets/styles/main.css
+++ b/learning/assets/styles/main.css
@@ -5,3 +5,16 @@
   height: 300px;
   background-size: cover;
 }
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity .5s;
+}
+
+.fade-enter,
+.fade-leave-to
+
+/* .fade-leave-active below version 2.1.8 */
+  {
+  opacity: 0;
+}
